# callgrind-compare

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demonstrate_real_callgrind.sh  test.sh  test_callgrind.sh
src/: args.rs  display.rs  main.rs  runs.rs
test_data/real_callgrind/: callgrind_differ_compare_high_threshold.cg  callgrind_differ_compare_low_threshold.cg  callgrind_differ_compare_medium_threshold.cg  callgrind_differ_help_high_threshold.cg  callgrind_differ_help_low_threshold.cg  callgrind_differ_help_medium_threshold.cg  complex_large_high_threshold.cg  complex_large_low_threshold.cg  complex_large_medium_threshold.cg  complex_medium_high_threshold.cg  complex_medium_low_threshold.cg  complex_medium_medium_threshold.cg  demo_output.csv  real_comparison.csv  simple_large_high_threshold.cg  simple_large_low_threshold.cg  simple_large_medium_threshold.cg  simple_small_high_threshold.cg  simple_small_low_threshold.cg  simple_small_medium_threshold.cg  test_export.csv  test_results.csv
tests/: integration_test.rs
