[package]
name = "callgrind_differ"
version = "0.1.0"
edition = "2021"
authors = ["levu12"]
description = "A tool to compare callgrind_annotate outputs and track performance changes over time"
readme = "README.md"
homepage = "https://github.com/levu12/callgrind_differ"
repository = "https://github.com/levu12/callgrind_differ"
license = "MIT"
keywords = ["callgrind", "performance", "profiling", "valgrind", "comparison"]
categories = ["command-line-utilities", "development-tools::profiling"]
exclude = [
    "test_data/",
    "documents/",
    "*.sh",
    ".vscode/",
    ".idea/",
]

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
is-terminal = "0.4"
clap = { version = "4.5.3", features = ["derive"] }
csv = "1.3"
itertools = "0.12.1"
